--- a/smsSpamClassification.ipynb
+++ b/smsSpamClassification.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "smsSpamClassification.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMv6EfKIbTqe8Dewd1IVtzO",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyMKADN+1bk3356POeIuZlAU"
     },
     "kernelspec": {
       "name": "python3",
@@ -18,16 +17,6 @@
     "accelerator": "GPU"
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/syno3/Data-science-portfolio/blob/dev/smsSpamClassification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
@@ -48,7 +37,7 @@
         "import csv\n",
         "import pandas as pd"
       ],
-      "execution_count": 1,
+      "execution_count": 85,
       "outputs": []
     },
     {
@@ -80,7 +69,7 @@
         "train_df = pd.read_csv(train_file_path, sep='\\t', names=['Classification', 'Text'])\n",
         "test_df = pd.read_csv(test_file_path, sep='\\t', names=['Classification', 'Text'])"
       ],
-      "execution_count": 3,
+      "execution_count": 86,
       "outputs": []
     },
     {
@@ -91,13 +80,13 @@
       "source": [
         "## Mapping the data\n",
         "\n",
-        "x_train = train_df.drop('Text', axis=1).astype('category')\n",
-        "y_train = train_df.drop('Classification', axis=1)\n",
+        "x_train = train_df.drop('Classification', axis=1)\n",
+        "y_train = train_df.drop('Text', axis=1).astype('category')\n",
         "\n",
-        "x_test = test_df.drop('Text', axis=1).astype('category')\n",
-        "y_test = test_df.drop('Classification', axis=1)"
+        "x_test = test_df.drop('Classification', axis=1)\n",
+        "y_test = test_df.drop('Text', axis=1).astype('category')"
       ],
-      "execution_count": 21,
+      "execution_count": 91,
       "outputs": []
     },
     {
@@ -108,10 +97,10 @@
       "source": [
         "### encoding the spam and ham into [0,1]\n",
         "\n",
-        "x_train =  x_train['Classification'].cat.codes\n",
-        "x_test = x_test['Classification'].cat.codes"
+        "y_train =  y_train['Classification'].cat.codes\n",
+        "y_test = y_test['Classification'].cat.codes"
       ],
-      "execution_count": 22,
+      "execution_count": 92,
       "outputs": []
     },
     {
@@ -122,12 +111,12 @@
       "source": [
         "## iterate over column (text) and encode raw text\n",
         "VOCAB_SIZE = 1000\n",
-        "for i in y_train:\n",
+        "for i in x_train:\n",
         "  encoder = tf.keras.layers.experimental.preprocessing.TextVectorization(\n",
         "      max_tokens=VOCAB_SIZE)\n",
-        "  encoder.adapt(np.array(y_train[i]))"
+        "  encoder.adapt(np.array(x_train[i]))"
       ],
-      "execution_count": 25,
+      "execution_count": 93,
       "outputs": []
     },
     {
@@ -136,12 +125,12 @@
         "id": "SNrPVVVTVMu8"
       },
       "source": [
-        "for j in y_test:\n",
+        "for j in x_test:\n",
         "  encoder = tf.keras.layers.experimental.preprocessing.TextVectorization(\n",
         "      max_tokens=VOCAB_SIZE)\n",
-        "  encoder.adapt(np.array(y_test[j]))"
+        "  encoder.adapt(np.array(x_test[j]))"
       ],
-      "execution_count": 29,
+      "execution_count": 94,
       "outputs": []
     },
     {
@@ -152,7 +141,7 @@
       "source": [
         "vocab = np.array(encoder.get_vocabulary())"
       ],
-      "execution_count": 31,
+      "execution_count": 95,
       "outputs": []
     },
     {
@@ -162,11 +151,11 @@
       },
       "source": [
         "### encode the text into indexes (y_train)\n",
-        "for i in y_train:\n",
-        "  data_train = y_train[i]\n",
-        "  encoded_y_train = encoder(data_train)[:3].numpy()\n"
+        "for i in x_train:\n",
+        "  data_train = x_train[i]\n",
+        "  encoded_x_train = encoder(data_train)[:3].numpy()\n"
       ],
-      "execution_count": 45,
+      "execution_count": 100,
       "outputs": []
     },
     {
@@ -176,11 +165,11 @@
       },
       "source": [
         "### encode the text into indexes (y_train)\n",
-        "for i in y_test:\n",
-        "  data_test = y_test[i]\n",
-        "  encoded_y_test = encoder(data_test)[:3].numpy()"
+        "for i in x_test:\n",
+        "  data_test = x_test[i]\n",
+        "  encoded_x_test = encoder(data_test)[:3].numpy()"
       ],
-      "execution_count": 46,
+      "execution_count": 97,
       "outputs": []
     },
     {
@@ -190,15 +179,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zBbsyt8IYG6M",
-        "outputId": "a7415913-dc36-48e0-e6f7-1fd3dbbdced7"
+        "outputId": "cd41e8ca-5586-401d-a55d-f798786852b8"
       },
       "source": [
         "for n in range(3):\n",
         "  print(\"Original: \", data_train[n])\n",
-        "  print(\"Round-trip: \", \" \".join(vocab[encoded_y_train[n]]))\n",
+        "  print(\"Round-trip: \", \" \".join(vocab[encoded_x_train[n]]))\n",
         "  print()"
       ],
-      "execution_count": 47,
+      "execution_count": 101,
       "outputs": [
         {
           "output_type": "stream",
@@ -237,7 +226,7 @@
         "    tf.keras.layers.Dense(1)\n",
         "])"
       ],
-      "execution_count": 48,
+      "execution_count": 102,
       "outputs": []
     },
     {
@@ -247,7 +236,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VtIq-j3JZUWz",
-        "outputId": "d9c7e0de-e537-4bc2-d5f3-cd46dc5283ad"
+        "outputId": "2eb1260e-7675-4d41-c216-7f9f112c78de"
       },
       "source": [
         "# predict on a sample text without padding.\n",
@@ -256,12 +245,12 @@
         "predictions = model.predict(np.array([sample_text]))\n",
         "print(predictions[0])"
       ],
-      "execution_count": 71,
+      "execution_count": 103,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[0.00501844]\n"
+            "[-0.01117236]\n"
           ],
           "name": "stdout"
         }
@@ -274,7 +263,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Lm61BhNzZldL",
-        "outputId": "d2751a92-0657-419b-fe0a-a7829a5d5816"
+        "outputId": "21f683d0-fc93-41bd-c912-a6b42afade17"
       },
       "source": [
         "# predict on a sample text with padding\n",
@@ -282,12 +271,12 @@
         "predictions = model.predict(np.array([sample_text, padding]))\n",
         "print(predictions[0])"
       ],
-      "execution_count": 72,
+      "execution_count": 104,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[0.00501844]\n"
+            "[-0.01117236]\n"
           ],
           "name": "stdout"
         }
@@ -305,8 +294,100 @@
         "              optimizer=tf.keras.optimizers.Adam(1e-4),\n",
         "              metrics=['accuracy'])"
       ],
-      "execution_count": 60,
+      "execution_count": 105,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iV4FMjBniXKa",
+        "outputId": "3ccdc11f-d7ae-40ef-88ad-de4378fa1941"
+      },
+      "source": [
+        "model.fit(x=x_train,y=y_train,epochs=10,validation_data=(x_test, y_test), verbose=1)"
+      ],
+      "execution_count": 107,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/10\n",
+            "131/131 [==============================] - 3s 20ms/step - loss: 0.0019 - accuracy: 0.9998 - val_loss: 0.1213 - val_accuracy: 0.9849\n",
+            "Epoch 2/10\n",
+            "131/131 [==============================] - 3s 22ms/step - loss: 0.0018 - accuracy: 0.9998 - val_loss: 0.1245 - val_accuracy: 0.9849\n",
+            "Epoch 3/10\n",
+            "131/131 [==============================] - 3s 20ms/step - loss: 0.0018 - accuracy: 0.9998 - val_loss: 0.1254 - val_accuracy: 0.9849\n",
+            "Epoch 4/10\n",
+            "131/131 [==============================] - 2s 19ms/step - loss: 0.0017 - accuracy: 0.9998 - val_loss: 0.1299 - val_accuracy: 0.9849\n",
+            "Epoch 5/10\n",
+            "131/131 [==============================] - 2s 19ms/step - loss: 0.0017 - accuracy: 0.9998 - val_loss: 0.1303 - val_accuracy: 0.9849\n",
+            "Epoch 6/10\n",
+            "131/131 [==============================] - 3s 19ms/step - loss: 0.0017 - accuracy: 0.9998 - val_loss: 0.1335 - val_accuracy: 0.9849\n",
+            "Epoch 7/10\n",
+            "131/131 [==============================] - 2s 19ms/step - loss: 0.0016 - accuracy: 0.9998 - val_loss: 0.1334 - val_accuracy: 0.9849\n",
+            "Epoch 8/10\n",
+            "131/131 [==============================] - 2s 19ms/step - loss: 0.0016 - accuracy: 0.9998 - val_loss: 0.1348 - val_accuracy: 0.9849\n",
+            "Epoch 9/10\n",
+            "131/131 [==============================] - 3s 20ms/step - loss: 0.0091 - accuracy: 0.9978 - val_loss: 0.1764 - val_accuracy: 0.9713\n",
+            "Epoch 10/10\n",
+            "131/131 [==============================] - 3s 21ms/step - loss: 0.0100 - accuracy: 0.9976 - val_loss: 0.1508 - val_accuracy: 0.9734\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tensorflow.python.keras.callbacks.History at 0x7fcefc3d7810>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 107
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aXXjsGbylJ4T",
+        "outputId": "1a471e90-4809-4076-90e5-81d36ca25e80"
+      },
+      "source": [
+        "predictions = model.predict_classes(x_test)\n",
+        "print(x_test[7:8])\n",
+        "print(\"probability\",y_test[7:8])\n",
+        "print(\"prediction was\",predictions[7])"
+      ],
+      "execution_count": 122,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/tensorflow/python/keras/engine/sequential.py:455: UserWarning: `model.predict_classes()` is deprecated and will be removed after 2021-01-01. Please use instead:* `np.argmax(model.predict(x), axis=-1)`,   if your model does multi-class classification   (e.g. if it uses a `softmax` last-layer activation).* `(model.predict(x) > 0.5).astype(\"int32\")`,   if your model does binary classification   (e.g. if it uses a `sigmoid` last-layer activation).\n",
+            "  warnings.warn('`model.predict_classes()` is deprecated and '\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "                               Text\n",
+            "7  yes. it's all innocent fun. o:-)\n",
+            "probability 7    0\n",
+            "dtype: int8\n",
+            "prediction was [0]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
