--- a/smsSpamClassification.ipynb
+++ b/smsSpamClassification.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "smsSpamClassification.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMKADN+1bk3356POeIuZlAU"
+      "authorship_tag": "ABX9TyNa127m85vKz5DuCRXUL9a4",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,6 +18,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/syno3/Data-science-portfolio/blob/dev/smsSpamClassification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -37,13 +48,17 @@
         "import csv\n",
         "import pandas as pd"
       ],
-      "execution_count": 85,
+      "execution_count": 83,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1Tbx_idxGI6k"
+        "id": "1Tbx_idxGI6k",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "593c0b98-24d1-432a-d18c-63949f0846fc"
       },
       "source": [
         "# get data files\n",
@@ -55,8 +70,37 @@
         "train_file_path = \"train-data.tsv\"\n",
         "test_file_path = \"valid-data.tsv\""
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--2021-07-11 07:27:10--  https://cdn.freecodecamp.org/project-data/sms/train-data.tsv\n",
+            "Resolving cdn.freecodecamp.org (cdn.freecodecamp.org)... 104.26.3.33, 172.67.70.149, 104.26.2.33, ...\n",
+            "Connecting to cdn.freecodecamp.org (cdn.freecodecamp.org)|104.26.3.33|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 358233 (350K) [text/tab-separated-values]\n",
+            "Saving to: ‘train-data.tsv.1’\n",
+            "\n",
+            "\rtrain-data.tsv.1      0%[                    ]       0  --.-KB/s               \rtrain-data.tsv.1    100%[===================>] 349.84K  --.-KB/s    in 0.03s   \n",
+            "\n",
+            "2021-07-11 07:27:10 (12.3 MB/s) - ‘train-data.tsv.1’ saved [358233/358233]\n",
+            "\n",
+            "--2021-07-11 07:27:10--  https://cdn.freecodecamp.org/project-data/sms/valid-data.tsv\n",
+            "Resolving cdn.freecodecamp.org (cdn.freecodecamp.org)... 104.26.3.33, 172.67.70.149, 104.26.2.33, ...\n",
+            "Connecting to cdn.freecodecamp.org (cdn.freecodecamp.org)|104.26.3.33|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 118774 (116K) [text/tab-separated-values]\n",
+            "Saving to: ‘valid-data.tsv.1’\n",
+            "\n",
+            "valid-data.tsv.1    100%[===================>] 115.99K  --.-KB/s    in 0.02s   \n",
+            "\n",
+            "2021-07-11 07:27:10 (7.30 MB/s) - ‘valid-data.tsv.1’ saved [118774/118774]\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -69,7 +113,7 @@
         "train_df = pd.read_csv(train_file_path, sep='\\t', names=['Classification', 'Text'])\n",
         "test_df = pd.read_csv(test_file_path, sep='\\t', names=['Classification', 'Text'])"
       ],
-      "execution_count": 86,
+      "execution_count": 85,
       "outputs": []
     },
     {
@@ -86,7 +130,7 @@
         "x_test = test_df.drop('Classification', axis=1)\n",
         "y_test = test_df.drop('Text', axis=1).astype('category')"
       ],
-      "execution_count": 91,
+      "execution_count": 86,
       "outputs": []
     },
     {
@@ -100,7 +144,7 @@
         "y_train =  y_train['Classification'].cat.codes\n",
         "y_test = y_test['Classification'].cat.codes"
       ],
-      "execution_count": 92,
+      "execution_count": 87,
       "outputs": []
     },
     {
@@ -116,7 +160,7 @@
         "      max_tokens=VOCAB_SIZE)\n",
         "  encoder.adapt(np.array(x_train[i]))"
       ],
-      "execution_count": 93,
+      "execution_count": 88,
       "outputs": []
     },
     {
@@ -130,7 +174,7 @@
         "      max_tokens=VOCAB_SIZE)\n",
         "  encoder.adapt(np.array(x_test[j]))"
       ],
-      "execution_count": 94,
+      "execution_count": 89,
       "outputs": []
     },
     {
@@ -141,7 +185,7 @@
       "source": [
         "vocab = np.array(encoder.get_vocabulary())"
       ],
-      "execution_count": 95,
+      "execution_count": 90,
       "outputs": []
     },
     {
@@ -155,7 +199,7 @@
         "  data_train = x_train[i]\n",
         "  encoded_x_train = encoder(data_train)[:3].numpy()\n"
       ],
-      "execution_count": 100,
+      "execution_count": 91,
       "outputs": []
     },
     {
@@ -169,7 +213,7 @@
         "  data_test = x_test[i]\n",
         "  encoded_x_test = encoder(data_test)[:3].numpy()"
       ],
-      "execution_count": 97,
+      "execution_count": 92,
       "outputs": []
     },
     {
@@ -179,7 +223,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zBbsyt8IYG6M",
-        "outputId": "cd41e8ca-5586-401d-a55d-f798786852b8"
+        "outputId": "1d5050bc-890f-415b-937c-d6b5cecf2bfd"
       },
       "source": [
         "for n in range(3):\n",
@@ -187,7 +231,7 @@
         "  print(\"Round-trip: \", \" \".join(vocab[encoded_x_train[n]]))\n",
         "  print()"
       ],
-      "execution_count": 101,
+      "execution_count": 93,
       "outputs": [
         {
           "output_type": "stream",
@@ -226,7 +270,7 @@
         "    tf.keras.layers.Dense(1)\n",
         "])"
       ],
-      "execution_count": 102,
+      "execution_count": 94,
       "outputs": []
     },
     {
@@ -236,21 +280,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VtIq-j3JZUWz",
-        "outputId": "2eb1260e-7675-4d41-c216-7f9f112c78de"
+        "outputId": "1e093ccc-1958-4b59-dffc-52e80847be99"
       },
       "source": [
         "# predict on a sample text without padding.\n",
-        "\n",
         "sample_text = (\"how are you doing today?\")\n",
         "predictions = model.predict(np.array([sample_text]))\n",
         "print(predictions[0])"
       ],
-      "execution_count": 103,
+      "execution_count": 95,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[-0.01117236]\n"
+            "[0.00554779]\n"
           ],
           "name": "stdout"
         }
@@ -263,7 +306,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Lm61BhNzZldL",
-        "outputId": "21f683d0-fc93-41bd-c912-a6b42afade17"
+        "outputId": "2586ec11-4271-492b-c720-df3b1e368531"
       },
       "source": [
         "# predict on a sample text with padding\n",
@@ -271,12 +314,12 @@
         "predictions = model.predict(np.array([sample_text, padding]))\n",
         "print(predictions[0])"
       ],
-      "execution_count": 104,
+      "execution_count": 96,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[-0.01117236]\n"
+            "[0.00554779]\n"
           ],
           "name": "stdout"
         }
@@ -294,7 +337,7 @@
         "              optimizer=tf.keras.optimizers.Adam(1e-4),\n",
         "              metrics=['accuracy'])"
       ],
-      "execution_count": 105,
+      "execution_count": 97,
       "outputs": []
     },
     {
@@ -304,36 +347,36 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iV4FMjBniXKa",
-        "outputId": "3ccdc11f-d7ae-40ef-88ad-de4378fa1941"
+        "outputId": "430b01a8-2e98-4a09-994c-68251135d317"
       },
       "source": [
         "model.fit(x=x_train,y=y_train,epochs=10,validation_data=(x_test, y_test), verbose=1)"
       ],
-      "execution_count": 107,
+      "execution_count": 98,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Epoch 1/10\n",
-            "131/131 [==============================] - 3s 20ms/step - loss: 0.0019 - accuracy: 0.9998 - val_loss: 0.1213 - val_accuracy: 0.9849\n",
+            "131/131 [==============================] - 11s 38ms/step - loss: 0.6010 - accuracy: 0.8660 - val_loss: 0.4835 - val_accuracy: 0.8657\n",
             "Epoch 2/10\n",
-            "131/131 [==============================] - 3s 22ms/step - loss: 0.0018 - accuracy: 0.9998 - val_loss: 0.1245 - val_accuracy: 0.9849\n",
+            "131/131 [==============================] - 3s 20ms/step - loss: 0.3830 - accuracy: 0.8660 - val_loss: 0.2460 - val_accuracy: 0.8657\n",
             "Epoch 3/10\n",
-            "131/131 [==============================] - 3s 20ms/step - loss: 0.0018 - accuracy: 0.9998 - val_loss: 0.1254 - val_accuracy: 0.9849\n",
+            "131/131 [==============================] - 3s 20ms/step - loss: 0.1677 - accuracy: 0.9129 - val_loss: 0.1149 - val_accuracy: 0.9670\n",
             "Epoch 4/10\n",
-            "131/131 [==============================] - 2s 19ms/step - loss: 0.0017 - accuracy: 0.9998 - val_loss: 0.1299 - val_accuracy: 0.9849\n",
+            "131/131 [==============================] - 3s 20ms/step - loss: 0.0971 - accuracy: 0.9718 - val_loss: 0.0840 - val_accuracy: 0.9741\n",
             "Epoch 5/10\n",
-            "131/131 [==============================] - 2s 19ms/step - loss: 0.0017 - accuracy: 0.9998 - val_loss: 0.1303 - val_accuracy: 0.9849\n",
+            "131/131 [==============================] - 3s 20ms/step - loss: 0.0700 - accuracy: 0.9777 - val_loss: 0.0675 - val_accuracy: 0.9763\n",
             "Epoch 6/10\n",
-            "131/131 [==============================] - 3s 19ms/step - loss: 0.0017 - accuracy: 0.9998 - val_loss: 0.1335 - val_accuracy: 0.9849\n",
+            "131/131 [==============================] - 3s 20ms/step - loss: 0.0559 - accuracy: 0.9825 - val_loss: 0.0583 - val_accuracy: 0.9799\n",
             "Epoch 7/10\n",
-            "131/131 [==============================] - 2s 19ms/step - loss: 0.0016 - accuracy: 0.9998 - val_loss: 0.1334 - val_accuracy: 0.9849\n",
+            "131/131 [==============================] - 3s 20ms/step - loss: 0.0461 - accuracy: 0.9866 - val_loss: 0.0531 - val_accuracy: 0.9842\n",
             "Epoch 8/10\n",
-            "131/131 [==============================] - 2s 19ms/step - loss: 0.0016 - accuracy: 0.9998 - val_loss: 0.1348 - val_accuracy: 0.9849\n",
+            "131/131 [==============================] - 3s 20ms/step - loss: 0.0382 - accuracy: 0.9878 - val_loss: 0.0560 - val_accuracy: 0.9835\n",
             "Epoch 9/10\n",
-            "131/131 [==============================] - 3s 20ms/step - loss: 0.0091 - accuracy: 0.9978 - val_loss: 0.1764 - val_accuracy: 0.9713\n",
+            "131/131 [==============================] - 2s 19ms/step - loss: 0.0325 - accuracy: 0.9907 - val_loss: 0.0504 - val_accuracy: 0.9864\n",
             "Epoch 10/10\n",
-            "131/131 [==============================] - 3s 21ms/step - loss: 0.0100 - accuracy: 0.9976 - val_loss: 0.1508 - val_accuracy: 0.9734\n"
+            "131/131 [==============================] - 3s 20ms/step - loss: 0.0270 - accuracy: 0.9919 - val_loss: 0.0486 - val_accuracy: 0.9878\n"
           ],
           "name": "stdout"
         },
@@ -341,13 +384,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7fcefc3d7810>"
+              "<tensorflow.python.keras.callbacks.History at 0x7fe050479290>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 107
+          "execution_count": 98
         }
       ]
     },
@@ -358,32 +401,100 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aXXjsGbylJ4T",
-        "outputId": "1a471e90-4809-4076-90e5-81d36ca25e80"
+        "outputId": "7a11cfdc-d993-42cf-eb82-554750f78b7a"
       },
       "source": [
-        "predictions = model.predict_classes(x_test)\n",
-        "print(x_test[7:8])\n",
-        "print(\"probability\",y_test[7:8])\n",
-        "print(\"prediction was\",predictions[7])"
+        "pred_text = \"how are you doing today?\"\n",
+        "predictions = model.predict(np.array([sample_text]))\n",
+        "print(\"prediction was\",predictions[0][0])"
       ],
-      "execution_count": 122,
+      "execution_count": 99,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "/usr/local/lib/python3.7/dist-packages/tensorflow/python/keras/engine/sequential.py:455: UserWarning: `model.predict_classes()` is deprecated and will be removed after 2021-01-01. Please use instead:* `np.argmax(model.predict(x), axis=-1)`,   if your model does multi-class classification   (e.g. if it uses a `softmax` last-layer activation).* `(model.predict(x) > 0.5).astype(\"int32\")`,   if your model does binary classification   (e.g. if it uses a `sigmoid` last-layer activation).\n",
-            "  warnings.warn('`model.predict_classes()` is deprecated and '\n"
+            "prediction was -5.6187515\n"
           ],
-          "name": "stderr"
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
         },
+        "id": "3uejHzsPX9Ng",
+        "outputId": "6c71b84a-d664-4653-d48e-664f20d5098e"
+      },
+      "source": [
+        "def predict_message(pred_text):\n",
+        "  result = model.predict([pred_text])\n",
+        "  if result >= 0.0:\n",
+        "    prediction  = [result[0][0],'spam']\n",
+        "  else:\n",
+        "    prediction  = [result[0][0],'ham']\n",
+        "\n",
+        "  return (prediction)\n",
+        "\n",
+        "pred_text = \"how are you doing today\"\n",
+        "\n",
+        "prediction = predict_message(pred_text)\n",
+        "print(prediction)"
+      ],
+      "execution_count": 114,
+      "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "                               Text\n",
-            "7  yes. it's all innocent fun. o:-)\n",
-            "probability 7    0\n",
-            "dtype: int8\n",
-            "prediction was [0]\n"
+            "[-5.6187515, 'ham']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "18_oU37WYNvN",
+        "outputId": "553fbdb4-aeb4-48cc-c4ea-caa430eb9a84"
+      },
+      "source": [
+        "def test_predictions():\n",
+        "  test_messages = [\"how are you doing today\",\n",
+        "                   \"sale today! to stop texts call 98912460324\",\n",
+        "                   \"i dont want to go. can we try it a different day? available sat\",\n",
+        "                   \"our new mobile video service is live. just install on your phone to start watching.\",\n",
+        "                   \"you have won £1000 cash! call to claim your prize.\",\n",
+        "                   \"i'll bring it tomorrow. don't forget the milk.\",\n",
+        "                   \"wow, is your arm alright. that happened to me one time too\"\n",
+        "                  ]\n",
+        "\n",
+        "  test_answers = [\"ham\", \"spam\", \"ham\", \"spam\", \"spam\", \"ham\", \"ham\"]\n",
+        "  passed = True\n",
+        "\n",
+        "  for msg, ans in zip(test_messages, test_answers):\n",
+        "    prediction = predict_message(msg)\n",
+        "    if prediction[1] != ans:\n",
+        "      passed = False\n",
+        "\n",
+        "  if passed:\n",
+        "    print(\"You passed the challenge. Great job!\")\n",
+        "  else:\n",
+        "    print(\"You haven't passed yet. Keep trying.\")\n",
+        "\n",
+        "test_predictions()\n"
+      ],
+      "execution_count": 117,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "You passed the challenge. Great job!\n"
           ],
           "name": "stdout"
         }
